change twitter/scrapper.py and delete a column on twitter/scrap.csv

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "pug": "~2.0.0-beta10",
     "serve-favicon": "~2.3.2"
   },
-  "description": "Outil permettant de connaître qui est le politique le plus populaire sur twitter et Google.",
+  "description": "Outil permettant de connaître qui est le politique le plus populaire sur twitter",
   "main": "app.js",
   "devDependencies": {},
   "repository": {
